# martini

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  appveyor.yml  codecov.yml  configure  configure.ac  environment.yml
.github/workflows/: check-bioc.yml
R/: NAMESPACE_exports.R  RcppExports.R  athal.R  cluster_snps.R  clusters.R  datasets.R  db.R  epistasis.R  evo.R  examplegwas.R  find_cones.R  find_snps.R  getGINet.R  getGMNet.R  getGSNet.R  getSettings.R  get_GI_network.R  get_GM_network.R  get_GS_network.R  get_evo_settings.R  get_networks.R  get_ppi.R  get_shake_settings.R  get_snp_track.R  ld.R  legacy.R  modules.R  networks.R  nongwas.R  plot_ideogram.R  plot_selected_snps.R  plot_snp_cluster.R  plots.R  scones.R  search_cones.R  shake.R  shake_test.R  sigmod.R  simulatePhenotype.R  simulate_causal_snps.R  (+8 more)
data/: examplegwas.rda  minigwas.rda  minippi.rda  minisnpMapping.rda  simplegwas.rda  toyGWAS.rda
debug/: CMakeLists.txt  DBreadNetwork.cpp  DBtest_associations_gridsearch.cpp
docs/: additive_model.ipynb
inst/: CITATION
inst/include/: martini.h  martini_RcppExports.h  rscones2.h  rscones2_RcppExports.h
man/: arrange_covars.Rd  athal.Rd  calculateE.Rd  calculateG.Rd  check_installed.Rd  cluster_snps.Rd  connect_biomart.Rd  encode_gwas.Rd  evo.Rd  examplegwas.Rd  find_cones.Rd  find_snps.Rd  get_A.Rd  get_GI_network.Rd  get_GM_network.Rd  get_GS_network.Rd  get_L.Rd  get_adjacency.Rd  get_ensembl_genes.Rd  get_evo_settings.Rd  get_feature_network.Rd  get_grid.Rd  get_gxg.Rd  get_gxg_biogrid.Rd  get_gxg_string.Rd  get_laplacian.Rd  get_ld.Rd  get_ld_from_gwas.Rd  get_ld_from_net.Rd  get_ppi.Rd  get_shake_settings.Rd  get_snp_modules.Rd  group_snps.Rd  gwas2bed.Rd  is_coherent.Rd  ld_prune.Rd  ldweight_edges.Rd  map2bed.Rd  maxflow.Rd  measure_epistasis.Rd  (+47 more)
man-roxygen/: params_X.R  params_c.R  params_col_genes.R  params_covars.R  params_criterion.R  params_eta.R  params_etas.R  params_family.R  params_featnames.R  params_flush.R  params_genome.R  params_gwas.R  params_lambda.R  params_lambdas.R  params_link.R  params_max_prop_snp.R  params_net.R  params_organism.R  params_scones.R  params_score.R  params_snpMapping.R  params_y.R  reference_azencott.R  return_cones.R
src/: CMakeLists.txt  Makevars  Makevars.common  Makevars.in  Makevars.win  RcppExports.cpp  create_scones_testing.cpp  evo.cpp  getData.cpp  getRegressionStats.cpp  getSettings.h  get_regression_stats.cpp  get_settings.cpp  get_settings.h  maxflow.cpp  mincut.cpp  readBio.cpp  readGWAS.cpp  read_gwas.cpp  runGin.cpp  runScones.cpp  run_scones.cpp  run_shake.cpp  testAssociations.cpp  testAssociationsCustomGridsearch.cpp  testAssociationsGridsearch.cpp  test_associations.cpp  test_associations_custom_gridsearch.cpp  test_associations_gridsearch.cpp
src/lib/Cephes/double/: mtherr.c  polmisc.c  polyn.c
src/lib/maxflow/: maxflow.cpp
tests/: testthat.R
tests/testthat/: big_network.R  examplegwas.rda  helper.R  helper_minimum_data.R  helper_skips.R  helper_test_data.R  minimum_data.R  test_calculateE.R  test_calculateG.R  test_check_installed.R  test_connect_biomart.R  test_encode_gwas.R  test_evo.R  test_get_GI_network.R  test_get_GM_network.R  test_get_GS_network.R  test_get_evo_settings.R  test_get_grid.R  test_get_gxg.R  test_get_gxg_biogrid.R  test_get_gxg_string.R  test_get_ld.R  test_get_ppi.R  test_get_shake_settings.R  test_get_snp_modules.R  test_group_snps.R  test_is_coherent.R  test_ld_prune.R  test_ldweight_edges.R  test_legacy.R  test_measure_epistasis.R  test_mincut_c.R  test_organism_id2name.R  test_parse_scones_settings.R  test_plot_ideogram.R  test_run_scones.R  test_sanitize_snpMapping.R  test_scones.R  test_scones.cv.R  test_scones.cv_.R  (+20 more)
vignettes/: bibliography.bib  scones_usage.R  scones_usage.Rmd  simulate_phenotype.R  simulate_phenotype.Rmd
